# LSM6DSO32

./: Cargo.toml  README.md
src/: ctrl1_xl.rs  ctrl2_g.rs  ctrl3_c.rs  ctrl4_c.rs  ctrl7_g.rs  ctrl9_xl.rs  lib.rs
