[package]
authors = ["Gregory Wainer"]
categories = ["embedded", "hardware-support", "no-std"]
description = "Driver for ST lsm6dso32 sensor"
documentation = "https://docs.rs/lsm6dso32-rs"
edition = "2021"
include = ["src/", "LICENSE-*", "README.md", "CHANGELOG.md", "COPYRIGHT"]
keywords = [
    "i2c",
    "embedded-hal-driver",
    "lsm6dso32",
    "gyroscope",
    "accelerometer",
]
license = "MIT"
name = "lsm6dso32-rs"
readme = "README.md"
repository = "https://github.com/RocketryVT/lsm6dso32-rs"
version = "0.0.1"

[dependencies]
defmt = "0.3"
embedded-hal = "1.0.0"
embedded-io = "0.6.1"
embedded-io-async = "0.6.1"

[dev-dependencies]
approx = "0.5.1"
embedded-hal-mock = "0.11"