[package]
authors = ["Gregory Wainer"]
categories = ["embedded", "hardware-support", "no-std"]
description = "Driver for ST LSM6DSO32 IMU"
documentation = "https://docs.rs/LSM6DSO32"
edition = "2021"
include = ["src/", "LICENSE-*", "README.md", "CHANGELOG.md", "COPYRIGHT"]
keywords = [
    "i2c",
    "embedded-hal-driver",
    "lsm6dso32",
    "imu",
    "LSM6DSO32",
    "gyroscope",
    "accelerometer",
]
license = "MIT"
name = "LSM6DSO32"
readme = "README.md"
repository = "https://github.com/RocketryVT/LSM6DSO32"
version = "0.0.1"

[dependencies]
defmt = "0.3"
embedded-hal = "1.0.0"
embedded-io = "0.6.1"
embedded-io-async = "0.6.1"

[dev-dependencies]
approx = "0.5.1"
embedded-hal-mock = "0.11"